--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,8 @@
     <!-- @include('html/h1.html') пример инклуда -->
   </div>
   <script src="js/vendor.js"></script>
+  <script src="https://api-maps.yandex.ru/2.1/?apikey=вашAPI-ключ&lang=ru_RU">
+  </script>
   <script src="js/main.js"></script>
 </body>
 
